[package]
name = "alerim-token"
version = "0.1.0"
edition = "2021"
description = "Alerim (AIM) token - A Solana-based cryptocurrency with referral rewards"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
solana-program = "1.14"
